# erofs-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  fuzz_finding.yml  task.yml
.github/workflows/: ci.yml  fuzz-erofs.yml  kernel-replay.yml
corpus/crashes/kernel-candidates/: README.md
corpus/crashes/kernel-kasan-candidates/: README.md
corpus/crashes/kernel-kcov-candidates/: README.md
corpus/regressions/kernel/: README.md
corpus/seeds/minimized/: README.md  manifest.json
docs/: 01-origin-and-design.md  02-fuzzing-architecture.md  03-corpus-format.md  03-fuzzing-architecture.md  04-corpus-format.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: checksum_fix_no_panic.rs  chunk_parse.rs  common.rs  compression_parse.rs  dirent_locate.rs  fsck_output_classify.rs  info_no_panic.rs  inject_named_field.rs  inode_locate.rs  kernel_dmesg_classify.rs  parser_differential.rs  report_schema_parse.rs  superblock_parse.rs  xattr_parse.rs
scripts/: build-erofs-utils-fuzzing.sh  build-erofs-utils-sanitized.sh  enable-erofs-config.sh  erofs-utils-safety-smoke.sh  generate-complex-seeds.sh  generate-seed-corpus.sh  generate-seed-matrix.sh  kernel-replay-common.sh  rootfs-init.c
src/: bundle.rs  checksum.rs  cli.rs  corpus.rs  dirent.rs  finding_bundle.rs  fsck.rs  fuzz.rs  image.rs  info.rs  inject.rs  inode.rs  kernel_queue.rs  kernel_replay.rs  lib.rs  main.rs  minimized.rs  mutate.rs  oracle.rs  oracle_diff.rs  parse.rs  replay.rs  seed_manifest.rs  triage.rs  tui.rs
src/mutate/: engine.rs  fields.rs  grammar.rs  manifest.rs  targets.rs
tests/: integration_tests.rs
tests/fixtures/: single.erofs  tree.erofs
