[package]
name = "erofs-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Your Name <you@example.com>"]
license = "GPL-2.0+"
description = "Advanced EROFS fuzzing and image injection tool written in Rust"
repository = "https://github.com/yourusername/erofs-rs"
exclude = [
    "build/",
    "corpus/",
    "target/",
    "vendor/",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
hex = "0.4"
rand = "0.8"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
