[package]
name = "erofs-rs-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.erofs-rs]
path = ".."

[[bin]]
name = "superblock_parse"
path = "fuzz_targets/superblock_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "inode_locate"
path = "fuzz_targets/inode_locate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dirent_locate"
path = "fuzz_targets/dirent_locate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "checksum_fix_no_panic"
path = "fuzz_targets/checksum_fix_no_panic.rs"
test = false
doc = false
bench = false
