[package]
name = "erofs-rs-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.erofs-rs]
path = ".."

[[bin]]
name = "superblock_parse"
path = "fuzz_targets/superblock_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "inode_locate"
path = "fuzz_targets/inode_locate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dirent_locate"
path = "fuzz_targets/dirent_locate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "checksum_fix_no_panic"
path = "fuzz_targets/checksum_fix_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "info_no_panic"
path = "fuzz_targets/info_no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "inject_named_field"
path = "fuzz_targets/inject_named_field.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xattr_parse"
path = "fuzz_targets/xattr_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chunk_parse"
path = "fuzz_targets/chunk_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compression_parse"
path = "fuzz_targets/compression_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_differential"
path = "fuzz_targets/parser_differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "kernel_dmesg_classify"
path = "fuzz_targets/kernel_dmesg_classify.rs"
test = false
doc = false
bench = false
